--- a/Posts-ref/hello-world.mdx
+++ b/Posts-ref/hello-world.mdx
@@ -3,6 +3,7 @@ title: "Hello World"
 description: "Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, ex!"
 date: "2022-01-15"
 tags: ['css']
+img: '/images/feature.svg'
 ---
 
 <Note emoji="👋">Hey there, I am a custom React component being rendered in [MDX](https://mdxjs.com/).</Note>
