Update url and sitemap.

--- a/posts/tailwind-css-integration-with-laravel.mdx
+++ b/posts/tailwind-css-integration-with-laravel.mdx
@@ -2,7 +2,7 @@
 title: "Unleashing the Power of Tailwind CSS in Laravel: A Harmonious Integration"
 description: "Getting Started: Setting Up Laravel with Tailwind CSS"
 date: "2022-07-03"
-tags: ['css', 'tailwind', 'laravel', 'php', 'vite']
+tags: ['css', 'tailwind', 'tailwind css', 'laravel', 'php', 'vite']
 img: '/images/laravel-vs-tailwind.png'
 ---
 In the world of web development, front-end frameworks have become an integral part of building modern and aesthetically pleasing user interfaces. Among these frameworks, Tailwind CSS has gained immense popularity due to its utility-first approach and highly customizable nature. Laravel, on the other hand, is a powerful PHP framework known for its simplicity and elegance. In this blog post, we will explore the seamless integration of Tailwind CSS with Laravel and unlock the combined potential of these two amazing technologies.
